Wed May 30 14:06:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/MeshOEMMIndex.java: Modify main arguments, to be
	consistent with Mesher arguments.

Wed May 23 12:01:48 CEST 2007 Ahmed Bennani <ahmed_b@users.sourceforge.net>

	* src/org/jcae/mesh/bora/ds/BDiscretization.java: New class.
	Most bora data structures are modified to fix previous bugs.

Mon May  7 10:49:16 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/OTriangle.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Rename OTriangle
	into VirtualHalfEdge.
	* src/org/jcae/mesh/amibe/traits/*.java
	  src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/AbstractMesh.java
	  src/org/jcae/mesh/amibe/ds/AbstractTriangle.java
	  src/org/jcae/mesh/amibe/ds/AbstractVertex.java: A new concept of
	'traits' is introduced to increase object genericity.  All entities
	have an Abstract* superclass, which contains common definitions for
	all subclasses.
	* src/org/jcae/mesh/amibe/ds/MMesh3D.java: Removed, 3d meshes are
	fully handled by Mesh class.

Release jCAE 0.14.1

Tue Apr 24 16:48:00 CET 2007  Jerome Robert <jeromerobert@users.sourceforge.net> 


	* src/org/jcae/mesh/xmldata/Amibe2UNV.java:
	  Full out-of-core UNV export

Thu Apr 19 17:17:00 CET 2007  Jerome Robert <jeromerobert@users.sourceforge.net> 

	* src/org/jcae/mesh/xmldata/UNV2Amibe.java: Allow to export 2412-21
	  (linear beams) and 2412-92 (parabolic trias) as a minimal unv

Fri Apr  6 14:14:00 CET 2007  Jerome Robert <jeromerobert@users.sourceforge.net> 

	* src/org/jcae/mesh/MeshOEMMIndex.java,
	  src/org/jcae/mesh/xmldata/Mesh3dToSoupConvert.java: Allow to use
	  the OEMM viewer on a 3D Mesh (was only 2D Mesh + geometry).

	* src/org/jcae/mesh/xmldata/UNV2Amibe.java: Add a tool to convert
	  UNV file to Amibe file

Release jCAE 0.14

Wed Apr 4 09:10:00 CET 2007  Jerome Robert <jeromerobert@users.sourceforge.net> 
