@@ -87,7 +87,7 @@
  those of the second leaf, etc.  Or in other words, each leaf has an
  index range which has been already computed, and global indices are
  equal to the sum of the minimal index
- {@link org.jcae.mesh.oemm.OEMMNode#minIndex} and a local index.
+ {@link org.jcae.mesh.oemm.OEMM.Node#minIndex} and a local index.
  The task performed during this traversal is thus to identify unique
  interior vertices.  This is done by using
  {@link org.jcae.mesh.oemm.PAVLTreeIntArrayDup} class, which is an
